tests/purs/failing/VisibleTypeApplications4.out
Error found:
in module [33mMain[0m
at tests/purs/failing/VisibleTypeApplications4.purs:7:8 - 7:14 (line 7, column 8 - line 7, column 14)

  A type variable:
  [33m     [0m
  [33m  foo[0m
  [33m     [0m
  in the type:
  [33m                                [0m
  [33m  forall @foo. Foo foo => String[0m
  [33m                                [0m
  cannot be skipped during type application.

while inferring the type of [33mfoo[0m
in value declaration [33mfoo'[0m

See https://github.com/purescript/documentation/blob/master/errors/CannotSkipTypeApplication.md for more information,
or to contribute content related to this error.

